--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.3.6",
     "@astrojs/check": "^0.5.4",
+    "@astrojs/tailwind": "^5.1.0",
+    "@fontsource-variable/outfit": "^5.0.8",
+    "astro": "^4.3.6",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
   }
 }
